# baby-monitor-web-app

./: .SourceSageignore  .gitignore  README.md  index.html
.github/prompts/: release-image.en.txt
.github/workflows/: static-site.yml
app/: .env.example  README.md  docker-compose.yml  mediamtx.yml
app/demo/: baby-monitor-2025-09-23T13-42-04-819Z.webm
app/gateway/: Dockerfile  main.py
app/nginx/: default.conf  hls.conf
app/web/: index.html
example/: README.md  pyproject.toml  tapo_c210_rtsp_viewer.py
example/gemini-realtime-streaming/: .env.example  README.md  pyproject.toml  stream_text.py  stream_video.py
example/tapo-rtsp-viewer/: .env.example  README.md  pyproject.toml  tapo_c210_rtsp_viewer.py  tapo_c210_snapshot.py
generated-images/release-v1.0.0-20250923_141136/: metadata.json
generated-images/release-v1.0.0-20250923_141825/: metadata.json
generated-images/release-v1.0.0-20250923_142543/: metadata.json
scripts/: create-swap-10G.sh  install_tailscale.sh  startup.sh
terraform/: .SourceSageignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
