[project]
name = "gemini-realtime-streaming-sample"
version = "0.1.0"
description = "Sample app for streaming responses from Gemini API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "google-genai>=1.35",
    "opencv-python-headless>=4.9",
]

[tool.uv]
package = false
